--- a/CMake/MacOSXBundleInfo.plist.in.in
+++ b/CMake/MacOSXBundleInfo.plist.in.in
@@ -33,7 +33,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>${MACOSX_BUNDLE_COPYRIGHT}</string>
 	<key>NSHighResolutionCapable</key>
-	<@MAC_HIGH_RESOLUTION_CAPABLE@/>
+	<@high_resolution_capable@/>
 
 <!-- File type associations -->
 <key>CFBundleDocumentTypes</key>
